@@ -5,6 +5,8 @@ Date: 2025-05-23
     - Updated ja locale thanks to snow note
     - Increased stack size of stack inserters
     - Agricultural tower does not require compressor to be built
+    - Reduced crafting speed of alloy forge
+    - Removed basic smelting, intermadiate smelting, melting and casting recipes from alloy forge
   Bugfixes:
     - Fixed zinc casting recipes produced more zinc oxide and zinc sulfate than they produce
     - Fixed indium casting recipes produced more indium sulfate than they produce
